# qecipe

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md  dashboard.html  fridge.html  signin.html
LeftoverLabFrontend/: CMakeLists.txt
UI/: dashboard.html  fridge.html  index.html  login.html  recipes.html  signin.html  signup.html  style.css
UI/js/: comm_mikey.js  comms.js  recipes.js
backend/: fridge_inventory.cpp  fridge_inventory.h  item.h  main_inventory.h  main_test.cpp  spice_item.cpp  spice_item.h  spice_pantry.cpp  spice_pantry.h
backend/database/: database.cpp  inventory.db
backend/include/: api_methods.h  database.h  date_utils.h  fridge_inventory.h  inventory.h  item.h  routes.h  spice_item.h  spice_pantry.h
backend/recipe/: RecipeSuggester.cpp
backend/src/: api_methods.cpp  database.cpp  date_utils.cpp  fridge_inventory.cpp  inventory.cpp  item.cpp  loginUser.cpp  main.cpp  routes.cpp  spice_item.cpp  spice_pantry.cpp
flask/: flasky.py  recipe_database.json
